--- a/server/mzitu_web/image/templates/image/folder.html
+++ b/server/mzitu_web/image/templates/image/folder.html
@@ -2,7 +2,6 @@
 
 <ul>
     {% for file in images %}
-    <!-- <li><a href="/image/image/{{ file.id }}">{{ file.name }}</a></li> -->
-    <li><a href="file:///{{ file.path }}" target="blank">{{ file.name }}</a></li>
+    <li><a href="{% url 'image:image_detail' file.id %}">{{ file.name }}</a></li>
     {% endfor %}
 </ul>
