--- a/server/mzitu_web/image/templates/image/images.html
+++ b/server/mzitu_web/image/templates/image/images.html
@@ -1,6 +1,7 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'image/style.css' %}" />
+
 <h1>{{ image.name }}</h1>
-
-<img src="file:///{{ image.path }}" />
-<ul>
-
-</ul>
+<img src="{% static 'image/bg.jpg' %}" />
+<img src="C://Users//liuchang//Desktop//bg.jpg" />
